fix: correct .nojekyll path in deploy workflow and remove redundant root lockfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Create .nojekyll
-        run: touch ./frontend/out/.nojekyll
+        run: touch out/.nojekyll
       - name: Restore cache
         uses: actions/cache@v4
         with:
